--- a/assets/styles/sass/components/_sections.scss
+++ b/assets/styles/sass/components/_sections.scss
@@ -4,7 +4,7 @@
   }
 }
 
-#about {
+.about {
 
   .section-header {
     background: linear-gradient(135deg, $blue-1, $blue-1 150px, $gray-2 150px);
@@ -14,7 +14,7 @@
     }
   }
 
-  & .about__content {
+  &__content {
     // display: flex;
     // align-items: center;
   }
@@ -39,7 +39,7 @@
   }
 }
 
-#skills {
+.skills {
 
   .section-header {
     background: linear-gradient(135deg, $blue-1, $blue-1 235px, $gray-2 235px);
@@ -49,35 +49,122 @@
     }
   }
 
-  & .skills {
-    &__content {
-      display: flex;
-      align-items: center;
-      flex-wrap: wrap;
+  &__content {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+  &__card {
+    margin: 0 15px 30px;
+
+    img {
+      height: 90px;
+      margin-bottom: 15px;
+
+      @include respond(sm) {
+        height: 135px;
+      }
+
+      @include respond(md) {
+        height: 175px;
+      }
     }
-    &__card {
-      margin-right: 35px;
-      margin-bottom: 35px;
 
-      img {
-        height: 90px;
-        margin-bottom: 15px;
+    p {
+      text-align: center;
+      font-size: 20px;
+    }
+  }
+}
 
-        @include respond(sm) {
-          height: 135px;
-          margin-right: 10px;
-        }
+.projects {
+  &__content {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    width: calc(100% + 60px);
+    transform: translateX(-30px);
 
-        @include respond(md) {
-          height: 175px;
-          margin-right: 15px;
+    @include respond(sm) {
+      width: 100%;
+      transform: none;
+    }
+  }
+  &__card {
+    width: 240px;
+    margin: 0 15px;
+
+    @include respond(xs) {
+      width: 300px;
+    }
+
+    img {
+      width: 100%;
+      border: 3px solid $blue-2;
+      // border-radius: 4px;
+    }
+  }
+
+  &__title {
+    text-align: center;
+    font-size: 20px;
+    padding-top: 2px;
+    margin-bottom: 0;
+    color: $gray-2;
+    background: 
+          linear-gradient(135deg, transparent 0px, transparent 26px, $blue-2 26px, $blue-2 60%, transparent 60%),
+          linear-gradient(45deg, transparent 0px, transparent 40%, $blue-2 40%, $blue-2 170px, transparent 170px);
+    
+    @include respond(xs) {
+      background: 
+          linear-gradient(135deg, transparent 0px, transparent 26px, $blue-2 26px, $blue-2 60%, transparent 60%),
+          linear-gradient(45deg, transparent 0px, transparent 40%, $blue-2 40%, $blue-2 213px, transparent 213px);
+    }
+  }
+
+  &__buttons {
+    width: 86%;
+    display: flex;
+    margin: 5px auto;
+
+    .btn {
+      width: 50%;
+      border-radius: 0;
+      border: none;
+      text-decoration: none;
+      transform: skewX(-45deg);
+
+      span {
+        display: block;
+        transform: skewX(45deg);
+      }
+
+      &--source {
+        background-color: $blue-2;
+        border-right: 2px solid transparent;
+
+        &:hover, &:focus {
+          background-color: $blue-3;
+          border-color: $blue-2;
         }
       }
 
-      p {
-        text-align: center;
-        font-size: 20px;
+      &--view {
+        color: $blue-1;
+        background-color: $blue-3;
+        border-left: 2px solid transparent;
+
+        &:hover, &:focus {
+          color: $blue-3;
+          background-color: $blue-2;
+          border-color: $blue-3;
+        }
       }
     }
+  }
+
+  &__description {
+
   }
 }
